<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_update_driver_schedule_from_context"
        android:title="@string/context_menu_shift_schedule"
        android:enabled="false"
        app:showAsAction="never"/>

    <item android:id="@+id/action_update_driver_from_context"
        android:title="@string/context_menu_edit"
        app:showAsAction="never"/>

    <item android:id="@+id/action_delete_driver_from_context"
        android:title="@string/context_menu_delete"
        app:showAsAction="never"/>

    <item android:id="@+id/action_delete_all_drivers_from_context"
        android:title="@string/action_clear_train_run"
        app:showAsAction="never"/>
</menu>
