<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.workschedule.ui.main.MainFragment"
        android:label="@string/nav_header_title"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_nav_main_to_nav_route_edit"
            app:destination="@id/nav_route_edit"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right" />
        <action
            android:id="@+id/action_nav_main_to_nav_drivers"
            app:destination="@id/nav_drivers"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_main_to_nav_trains"
            app:destination="@id/nav_trains"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_to_schedule_all_drivers"
            app:destination="@id/nav_schedule_all_drivers"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_drivers"
        android:name="com.example.workschedule.ui.drivers.DriversFragment"
        android:label="@string/drivers"
        tools:layout="@layout/fragment_drivers" >
        <action
            android:id="@+id/action_nav_drivers_to_nav_driver_edit"
            app:destination="@id/nav_driver_edit"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right" />
        <action
            android:id="@+id/action_nav_drivers_to_nav_main"
            app:destination="@id/nav_main"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_drivers_to_nav_trains"
            app:destination="@id/nav_trains"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_to_schedule_all_drivers"
            app:destination="@id/nav_schedule_all_drivers"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_trains"
        android:name="com.example.workschedule.ui.trains.TrainsFragment"
        android:label="@string/menu_direction"
        tools:layout="@layout/fragment_trains" >
        <action
            android:id="@+id/action_nav_trains_to_nav_train_edit"
            app:destination="@id/nav_train_edit"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right" />
        <action
            android:id="@+id/action_nav_trains_to_nav_main"
            app:destination="@id/nav_main"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_trains_to_nav_drivers"
            app:destination="@id/nav_drivers"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
        <action
            android:id="@+id/action_nav_to_schedule_all_drivers"
            app:destination="@id/nav_schedule_all_drivers"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/nav_train_edit"
        android:name="com.example.workschedule.ui.train_edit.TrainEditFragment"
        android:label="@string/menu_train_edit"
        tools:layout="@layout/fragment_train_edit" >
    </fragment>

    <fragment
        android:id="@+id/nav_driver_edit"
        android:name="com.example.workschedule.ui.driver_edit.DriverEditFragment"
        android:label="@string/menu_driver_edit"
        tools:layout="@layout/fragment_driver_edit" >
    </fragment>

    <fragment
        android:id="@+id/nav_route_edit"
        android:name="com.example.workschedule.ui.trainrun_edit.TrainRunEditFragment"
        android:label="@string/menu_route_edit"
        tools:layout="@layout/fragment_trainrun_edit" >
    </fragment>
  
    <fragment
        android:id="@+id/nav_schedule_all_drivers"
        android:name="com.example.workschedule.ui.joint_schedule.SchedulersFragment"
        android:label="@string/menu_schedule_all_drivers"
        tools:layout="@layout/fragment_schedule_all_drivers" >
    </fragment>

</navigation>
