<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/routeEditConstraints"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentDateTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_departure_time"
        app:endIconDrawable="@drawable/ic_date_and_time"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentTrainNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_train_number"
        app:endIconDrawable="@android:drawable/ic_menu_edit"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentDateTimeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentTrainNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentTrainDirectionLayout"
        style="@style/DropDownTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_train_direction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentTrainNumberLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/routeEditFragmentTrainDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentDriverLayout"
        style="@style/DropDownTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_driver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentTrainDirectionLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/routeEditFragmentDriver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentPeriodicityLayout"
        style="@style/DropDownTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_periodicity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentDriverLayout">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/routeEditFragmentPeriodicity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentTimeToLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_time_to"
        app:endIconDrawable="@drawable/ic_timer"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentPeriodicityLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentTimeTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentTimeRestLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_rest_time"
        app:endIconDrawable="@drawable/ic_timer"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentTimeToLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentTimeRest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/routeEditFragmentTimeFromLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_route_time_from"
        app:endIconDrawable="@drawable/ic_timer"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routeEditFragmentTimeRestLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/routeEditFragmentTimeFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/routeEditFragmentSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:padding="10dp"
        android:text="@string/save_button"
        app:layout_constraintTop_toBottomOf="@+id/routeEditFragmentButtonsGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/routeEditFragmentGuidelineRight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/routeEditFragmentCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/routeEditFragmentButtonsGuideline"
        app:layout_constraintEnd_toEndOf="@id/routeEditFragmentGuidelineLeft"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/routeEditFragmentGuidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/routeEditFragmentGuidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/routeEditFragmentButtonsGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />
</androidx.constraintlayout.widget.ConstraintLayout>
