<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trainEditFragmentDirectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_train_direction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/trainEditFragmentDirection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/trainEditFragmentSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:padding="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/save_button"
        app:layout_constraintTop_toBottomOf="@id/trainEditFragmentDirectionLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/trainEditFragmentRightGuideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/trainEditFragmentCancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/trainEditFragmentDirectionLayout"
        app:layout_constraintEnd_toEndOf="@id/trainEditFragmentLeftGuideline"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/trainEditFragmentLeftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/trainEditFragmentRightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />
</androidx.constraintlayout.widget.ConstraintLayout>
