<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_main"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:popupTheme="@style/PopupTheme">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toolbar_add_new_route"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_add_icon"
                android:backgroundTint="@color/secondary_light"
                android:layout_gravity="end"
                android:tooltipText="@string/add_new_route"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toolbar_add_new_driver"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_add_icon"
                android:backgroundTint="@color/secondary_light"
                android:layout_gravity="end"
                android:tooltipText="@string/add_new_driver"
                android:visibility="gone"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toolbar_add_new_train"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_add_icon"
                android:backgroundTint="@color/secondary_light"
                android:layout_gravity="end"
                android:tooltipText="@string/add_new_train"
                android:visibility="gone"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!--    Content main    -->
    <include layout="@layout/content_main" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
